--- a/GH/index.html
+++ b/GH/index.html
@@ -20,7 +20,7 @@
 
 body{
     height: 100vh;
-    background: linear-gradient(155deg, #667eea, #764ba2);
+    background: linear-gradient(155deg, #764ba2, #667eea);
     display: flex;
     align-items: center;       /* alinha verticalmente */
     justify-content: center;  /* alinha horizontalmente */
